[gd_scene load_steps=9 format=3 uid="uid://dd0e2heu8kv7v"]

[ext_resource type="Texture2D" uid="uid://cl48hq4ve32cg" path="res://assets/Controls/Screenshot_20250817_215302.png" id="1_28flt"]
[ext_resource type="Texture2D" uid="uid://bxu8s6gwoh15" path="res://assets/pexels-pixabay-56618.jpg" id="1_n45e2"]
[ext_resource type="Script" uid="uid://bqj4ppghagni5" path="res://Scenes/main_menu.gd" id="1_opfnp"]
[ext_resource type="Texture2D" uid="uid://drnj7cw7c13c8" path="res://assets/selfmade/fischsemmel.png" id="2_48xlc"]
[ext_resource type="LabelSettings" uid="uid://c3ft0fp5rco6r" path="res://new_label_settings.tres" id="4_opfnp"]
[ext_resource type="Texture2D" uid="uid://ddonxmd6exknx" path="res://assets/selfmade/pebble.png" id="5_cp0ys"]
[ext_resource type="AudioStream" uid="uid://dh6c8q3t6rrbb" path="res://assets/seagulls_short-6004.mp3" id="8_trj04"]
[ext_resource type="Texture2D" uid="uid://2b0pcdqfec3u" path="res://assets/barrelRust_top.png" id="8_yhxw7"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opfnp")

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_n45e2")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -426.0
offset_top = -79.0
offset_right = -276.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "START"

[node name="OPTIONS?!" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
toggle_mode = true
text = "CONTROLS?!"

[node name="EXIT" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Exit"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 210.0
offset_right = 1980.0
offset_bottom = 1234.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_48xlc")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 449.0
offset_top = 192.0
offset_right = 767.0
offset_bottom = 215.0
text = "THIS IS YOUR FOOD, THEY WON'T GET EM!"
label_settings = ExtResource("4_opfnp")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 396.0
offset_right = 789.0
offset_bottom = 419.0
text = "This is also your life (5 Points)"
label_settings = ExtResource("4_opfnp")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 912.0
offset_top = 199.0
offset_right = 960.0
offset_bottom = 247.0
texture = ExtResource("5_cp0ys")

[node name="Label3" type="Label" parent="TextureRect3"]
layout_mode = 0
offset_left = 57.0
offset_top = 12.0
offset_right = 229.0
offset_bottom = 35.0
text = "FAST, but weak Ammo"
label_settings = ExtResource("4_opfnp")

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 911.0
offset_top = 257.0
offset_right = 959.0
offset_bottom = 305.0
texture = ExtResource("8_yhxw7")

[node name="Label4" type="Label" parent="TextureRect4"]
layout_mode = 0
offset_left = 60.0
offset_top = 12.0
offset_right = 100.0
offset_bottom = 35.0
text = "Slow AF, HITS HARD"
label_settings = ExtResource("4_opfnp")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 917.0
offset_top = 115.0
offset_right = 1150.0
offset_bottom = 190.0
text = "Ammo is in the Trash, GET IT

xoxo mum"
label_settings = ExtResource("4_opfnp")

[node name="Controls" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -269.0
offset_right = 1.0
offset_bottom = 267.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_28flt")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 573.0
offset_right = 278.0
offset_bottom = 648.0
text = "BY THE GLORIOUS AND HANDSOME
	 @dandygargls 
xoxo love you all"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 2.0
offset_right = 621.0
offset_bottom = 25.0
scale = Vector2(2, 2)
text = "MEIN FISCHSEMMEL!!"
label_settings = ExtResource("4_opfnp")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_trj04")
autoplay = true
bus = &"music"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="VBoxContainer/OPTIONS?!" to="." method="_on_options_toggled"]
[connection signal="pressed" from="VBoxContainer/EXIT" to="." method="_on_exit_pressed"]
